<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_edit_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.EditEventActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress_horizontal_edit_event"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            tools:visibility="visible" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="true"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_horizontal_edit_event">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/iv_icon_event_hour"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_HORA_EVENTO"
                    app:layout_constraintBottom_toBottomOf="@+id/il_event_hour"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_event_hour"
                    app:srcCompat="@drawable/ic_date_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_event_hour"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/HORA_EVENTO"
                    app:endIconDrawable="@drawable/ic_date_black_24dp"
                    app:endIconMode="custom"
                    app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_event_hour"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_event_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:fontFamily="@font/roboto"
                        android:inputType="date"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_action_event"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_ACCION_EVENTO"
                    app:layout_constraintBottom_toBottomOf="@+id/il_action_event"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_action_event"
                    app:srcCompat="@drawable/ic_directions_run_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <!-- Autocompletado de escritura manual COMBINADO
                con selector de opciones fijo (SPINNER)-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_action_event"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/ACCION"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_action_event"
                    app:layout_constraintTop_toBottomOf="@+id/il_event_hour">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/et_action_event"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:completionThreshold="1"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/roboto"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textSize="16sp"
                        tools:text="Acción" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_select_emoticon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/SELECCIONAR_EMOTICON"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toBottomOf="@+id/il_action_event" />

                <ImageView
                    android:id="@+id/iv_icon_emoticon_event"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_EMOTICON_EVENTO"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner_emoticon"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/spinner_emoticon"
                    app:srcCompat="@drawable/ic_tag_faces_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <Spinner
                    android:id="@+id/spinner_emoticon"
                    style="@android:style/Widget.Material.Spinner"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_emoticon_event"
                    app:layout_constraintTop_toBottomOf="@+id/tv_select_emoticon" />

                <ImageView
                    android:id="@+id/iv_icon_justification_event"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_JUSTIFICACION_EVENTO"
                    app:layout_constraintBottom_toBottomOf="@+id/il_justification_event"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_justification_event"
                    app:srcCompat="@drawable/ic_question_answer_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_justification_event"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/JUSTIFICACION"
                    app:endIconDrawable="@drawable/ic_mic_black_24dp"
                    app:endIconMode="custom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_justification_event"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_emoticon"
                    app:layout_constraintVertical_bias="0.0">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_justification_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textMultiLine"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guia_izq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guia_der"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>